--- a/github/workflows/auto-merge-jules.yml
+++ b/github/workflows/auto-merge-jules.yml
@@ -2,12 +2,11 @@ name: Auto-Merge Jules PRs
 
 on:
   pull_request:
-    types: [opened, synchronize, reopened]
+    types: [opened, synchronize, reopened, ready_for_review]
 
 jobs:
   automerge:
     runs-on: ubuntu-latest
-    # CORRECTED: Use the Google Labs specific bot name
     if: github.actor == 'google-labs-jules[bot]'
     permissions:
       contents: write
@@ -21,5 +20,6 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PR_URL: ${{ github.event.pull_request.html_url }}
         run: |
-          gh pr review "$PR_URL" --approve --body "Auto-approved changes from Google Jules."
+          gh pr ready "$PR_URL" || true
+          gh pr review "$PR_URL" --approve --body "Auto-approved."
           gh pr merge "$PR_URL" --auto --squash
