--- a/github/workflows/auto-merge-jules.yml
+++ b/github/workflows/auto-merge-jules.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   automerge:
     runs-on: ubuntu-latest
-    if: github.actor == 'google-labs-jules[bot]'
+    if: github.actor == 'google-labs-jules'
     permissions:
       contents: write
       pull-requests: write
