--- a/.github/workflows/auto-merge-jules.yml
+++ b/.github/workflows/auto-merge-jules.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   automerge:
     runs-on: ubuntu-latest
-    if: github.event.pull_request.user.login == 'google-labs-jules'
+    if: github.event.pull_request.user.login == 'google-labs-jules[bot]'
     permissions:
       contents: write
       pull-requests: write
